name:                bash-view
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jali-clarke/bash-view#readme
license:             BSD3
license-file:        LICENSE
author:              Jinnah Ali-Clarke
maintainer:          jinnah.ali-clarke@outlook.com
copyright:           Jinnah Ali-Clarke 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PicConvert
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , JuicyPixels
  default-language:    Haskell2010

executable bash-view-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bash-view
  default-language:    Haskell2010

test-suite bash-view-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bash-view
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jali-clarke/bash-view
